include/dss_capi.h

    DSS_CAPI_DLL void ActiveClass_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    DSS_CAPI_DLL int32_t ActiveClass_Get_First(void);
    DSS_CAPI_DLL int32_t ActiveClass_Get_Next(void);
    DSS_CAPI_DLL char* ActiveClass_Get_Name(void);
    DSS_CAPI_DLL void ActiveClass_Set_Name(char* Value);
    DSS_CAPI_DLL int32_t ActiveClass_Get_NumElements(void);
    DSS_CAPI_DLL char* ActiveClass_Get_ActiveClassName(void);
    DSS_CAPI_DLL int32_t ActiveClass_Get_Count(void);